
More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_nodes

Changes in progress
---------------------------------------------------------------------------------------
- Reactor: Fixed bug with right column size (#Trello 1185)
- Reactor: Fixed bug with menu icons with 2-lines text (#Trello #1184)


Changes 16.03.14
---------------------------------------------------------------------------------------
- Reactor: Moved hard coded language strings to po file (Trello #963)
- Reactor: Moved equalization of cards to a file previously loaded to increase speed (Trello #963)
- Reactor: Merged files from primaria and serveis-education to the parent theme (Trello #963)
- mu-common: Improved add category image option to let remove it (Trello #1150)
- xtec-ldap-login: Ensure the user metadata is set, as it is required to create blogs in XTECBlocs (Trello #1105)
- bp-moderation: Fixed bug with incorrect viewing link from inappropriate admin comments page (Trello #1160)
- Themes: Revert changes made to avoid 3 columns (Trello #1173)
- Themes: Merged css files (Trello #1173)
- Themes: Deleted unused functions and fonts (Trello #1173)
- Intraweb Importer: Optimize intranet importer loading (Trello #1173)
- Themes: Merge side-menu template (Trello #1173)
- Themes: Create a grid to display a header properly (Trello #1173)
- GCE: Fixed warning for non-superadmin users


Changes 16.02.22
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.2.7
- Common: Moved edit cat description with HTML editor to common and added also tags (Trello #1129)
- Google Analyticator: Added missing </div> that breaks view in mobile devices (Trello #1134)
- Carrusel: Fixed bug with new Google+ albums (were not working) (Trello #1055)
- Added again some Reading options for XTECBlocs administrators which are hidden in Nodes (Trello #1028)